# ddev-rust-server

./: Cargo.toml  Dockerfile  Modelfile  README.md  opencode.json
posts/: bom-dia.md  books-2021.md  bug-hunt.md  chat-bot.md  cheap-lazy-bastard.md  clever-girl.md  context-api.md  gh-actions.md  git-the-changelog.md  google-next-2024.md  ho-ho-ho.md  hyrule-hijinx.md  i-cant-quit-you.md  kranz.md  linux-on-macbook-m1.md  little-shortcuts.md  lotr.md  lua-lua.md  modular-apps-with-the-jamstack.md  new-year-same-me.md  next-auth-heroku.md  ninja-pirates.md  not-that-latex.md  obsidian-daily-template.md  qr-carpool.md  recursion-on-recursion.md  red-green-refactor.md  runbooks.md  rusty-dominguez.md  self-promotion.md  slack-cal.md  snip-snap-snip-snap.md  stop-wiping-me.md  stripe-webhooks-and-nextjs.md  todo-or-not-todo.md  tutoring-bar.md  twelve-deg.md  vector-embeddings.md  whats-that-code-again.md  wilt-week-of-2024-01-05.md  (+8 more)
projects/: docusaurus-to-pdf.md  ez-resy.md  promptql-chat-sdk.md
src/: main.rs
src/handlers/: home.rs  mod.rs  posts.rs  projects.rs
src/models/: mod.rs  post.rs  project.rs
src/services/: content_service.rs  mod.rs
src/transformation/: mod.rs  populate_posts.rs  transform_md.rs
src/utils/: frontmatter.rs  mod.rs
static/: prism.js
static/css/: main.css  prism.css
templates/: card.html  index.html  post.html  posts.html  project-card.html  project.html  projects.html
