[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
pulldown-cmark = "0.10.0"
regex = "1"
log = "0.4"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
